# tree-sitter-registry

./: .gitignore  LICENSE  README.md  vcpkg.json
.github/workflows/: vcpkg.yml
ci/: add_versions.sh  portfile.cmake.in  usage.in  write-manifests.lua  write-manifests.sh
example/: CMakeLists.txt  CMakePresets.json  test-json-parser.c  vcpkg-configuration.json  vcpkg.json
ports/: portfile.cmake
ports/tree-sitter-bash/: portfile.cmake  vcpkg.json
ports/tree-sitter-c/: portfile.cmake  vcpkg.json
ports/tree-sitter-common/: CMakeLists.txt.in  parsers.lockfile.json  vcpkg_ts_parser_add.cmake
ports/tree-sitter-css/: portfile.cmake  vcpkg.json
ports/tree-sitter-javascript/: portfile.cmake  vcpkg.json
ports/tree-sitter-json/: portfile.cmake  vcpkg.json
ports/tree-sitter-lua/: portfile.cmake  vcpkg.json
ports/tree-sitter-python/: portfile.cmake  vcpkg.json
ports/tree-sitter-rust/: portfile.cmake  vcpkg.json
ports/tree-sitter-typescript/: portfile.cmake  vcpkg.json
ports/tree-sitter-yaml/: portfile.cmake  vcpkg.json
scripts/: abi_version.sh  add_versions.sh  calculate_sha512.sh  portfile.cmake.in  write-manifests.lua  write-manifests.sh
versions/: baseline.json
versions/t-/: tree-sitter-bash.json  tree-sitter-c.json  tree-sitter-common.json  tree-sitter-cpp.json  tree-sitter-css.json  tree-sitter-javascript.json  tree-sitter-json.json  tree-sitter-lua.json  tree-sitter-python.json  tree-sitter-rust.json  tree-sitter-typescript.json  tree-sitter-yaml.json
